# binchecker-lib

./: README.md  meson.build
src/: libbindiff.c  libbindiff.h
